PLD-COMP-RENDU/pld-comp/tests/ifcc-test-output/testfiles-test-erreurs-Test-4_11-137_else_with_condition1_invalid/gcc-compile.txt
input.c:5:9: warning: using the result of an assignment as a condition without parentheses [-Wparentheses]
    if(a=a+4){
       ~^~~~
input.c:5:9: note: place parentheses around the assignment to silence this warning
    if(a=a+4){
        ^
       (    )
input.c:5:9: note: use '==' to turn this assignment into an equality comparison
    if(a=a+4){
        ^
        ==
input.c:7:11: error: expected expression
    }else(){
          ^
1 warning and 1 error generated.

return code: 1
